[gd_scene load_steps=40 format=4 uid="uid://cg6pw00aq42yl"]

[ext_resource type="Script" uid="uid://cu2xvet0aygvj" path="res://CO_GANH/scripts/board.gd" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://dfnu7354brnr3" path="res://CO_GANH/scripts/bot_select_layer.gd" id="2_jscy8"]
[ext_resource type="Texture2D" uid="uid://chlbrq5q7w1xy" path="res://CO_GANH/assets/sprites/cell.png" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://tgy0sxi4wk1g" path="res://CO_GANH/assets/sprites/ava1.png" id="3_pm3ni"]
[ext_resource type="Script" uid="uid://dpxe2i1psjf1h" path="res://CO_GANH/scripts/pieces.gd" id="3_sugp2"]
[ext_resource type="Script" uid="uid://cp3irvo2q42ql" path="res://CO_GANH/scripts/labelnhapnhay.gd" id="4_a8y0u"]
[ext_resource type="Texture2D" uid="uid://bvv232ptcmshv" path="res://CO_GANH/assets/sprites/ava2.png" id="4_jbj1t"]
[ext_resource type="Texture2D" uid="uid://gba038svyif5" path="res://CO_GANH/assets/sprites/BG.png" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://gjt2d0ahrlc1" path="res://CO_GANH/assets/sprites/newCell.png" id="5_tipki"]
[ext_resource type="Texture2D" uid="uid://cwgmu4vv45x6c" path="res://CO_GANH/assets/sprites/ava3.png" id="6_0ld40"]
[ext_resource type="AudioStream" uid="uid://djc8fe84p1mau" path="res://CO_GANH/assets/sounds/ganh.wav" id="6_choun"]
[ext_resource type="Texture2D" uid="uid://buy2xkn4sgbro" path="res://CO_GANH/assets/sprites/av4.png" id="7_y6deb"]
[ext_resource type="AudioStream" uid="uid://dojtwtl3jmjdj" path="res://CO_GANH/assets/sounds/move.wav" id="7_ya4ey"]
[ext_resource type="AudioStream" uid="uid://bjnh3i115x35r" path="res://CO_GANH/assets/sounds/vay.wav" id="8_eb6dy"]
[ext_resource type="AudioStream" uid="uid://dv3xhjfpc3yjv" path="res://CO_GANH/assets/sounds/victory.wav" id="9_trceg"]
[ext_resource type="Texture2D" uid="uid://vo58fehnv1j1" path="res://CO_GANH/assets/sprites/ava5.png" id="9_yc10j"]
[ext_resource type="AudioStream" uid="uid://dopcv40w40ngh" path="res://CO_GANH/assets/sounds/loss.wav" id="10_a8y0u"]
[ext_resource type="AudioStream" uid="uid://baoqx3nvck7pt" path="res://CO_GANH/assets/sounds/click.wav" id="10_choun"]
[ext_resource type="FontFile" uid="uid://dn1wmapu87jt8" path="res://_SHARED ASSETS/font/SVN-Retron 2000.otf" id="12_y6deb"]
[ext_resource type="Texture2D" uid="uid://bri0f3rqtexi7" path="res://CO_GANH/assets/sprites/CFButton.png" id="13_y6deb"]
[ext_resource type="Script" uid="uid://clt0pfs2lrmns" path="res://CO_GANH/scripts/highlight.gd" id="14_og1vs"]
[ext_resource type="AudioStream" uid="uid://cf7hy54oas2v6" path="res://CO_GANH/assets/sounds/botselect.wav" id="26_2wyq8"]
[ext_resource type="Texture2D" uid="uid://b8b6bvm7jksmy" path="res://CO_GANH/assets/sprites/cat.png" id="27_tel4y"]
[ext_resource type="Texture2D" uid="uid://cscoxyfhh5e60" path="res://CO_GANH/assets/sprites/player.png" id="28_2f3dj"]
[ext_resource type="Script" uid="uid://qdoyx3ij6l1a" path="res://CO_GANH/scripts/point.gd" id="29_yq6so"]
[ext_resource type="Texture2D" uid="uid://bhvtxunrdsfne" path="res://CO_GANH/assets/sprites/vic.png" id="30_fv21b"]
[ext_resource type="Texture2D" uid="uid://be74h052ehr87" path="res://CO_GANH/assets/sprites/loss.png" id="31_tel4y"]
[ext_resource type="Script" uid="uid://o2wnbq4jqpxn" path="res://MAIN/script/game_control.gd" id="32_ijtf4"]
[ext_resource type="Texture2D" uid="uid://d04mex2btkvfd" path="res://MAIN/assets/ui/pause_icon.png" id="33_ojrv4"]
[ext_resource type="Texture2D" uid="uid://bt527iaapnslo" path="res://MAIN/assets/ui/pause_screen_in_game.png" id="34_mui7k"]
[ext_resource type="Theme" uid="uid://ccjbl02crsn70" path="res://MAIN/assets/control_theme.tres" id="35_r634c"]
[ext_resource type="StyleBox" uid="uid://cjd00vb5wc7vg" path="res://MAIN/assets/control_hover.tres" id="36_2jwfa"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sugp2"]
texture = ExtResource("2_sugp2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jyhfs"]
texture = ExtResource("5_tipki")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tbgi4"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_sugp2")
sources/14 = SubResource("TileSetAtlasSource_jyhfs")
tile_proxies/coords_level = [[0, Vector2i(0, 0)], [2, Vector2i(0, 0)], [1, Vector2i(0, 0)], [2, Vector2i(1, 0)], [12, Vector2i(0, 0)], [14, Vector2i(0, 0)], [13, Vector2i(0, 0)], [14, Vector2i(1, 0)]]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tbgi4"]
texture = ExtResource("4_tbgi4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0

[sub_resource type="TileSet" id="TileSet_o6xl0"]
tile_size = Vector2i(64, 64)
sources/3 = SubResource("TileSetAtlasSource_tbgi4")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_brbbq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8n18e"]

[node name="Node" type="Node"]
script = ExtResource("1_jyhfs")
board_start_position = Vector2(155, 155)

[node name="BotSelectLayer" type="CanvasLayer" parent="."]
layer = 10
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)
script = ExtResource("2_jscy8")

[node name="Block" type="Control" parent="BotSelectLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ava1" type="TextureButton" parent="BotSelectLayer"]
z_index = 5
offset_left = -8.0
offset_top = 63.0
offset_right = 120.0
offset_bottom = 146.0
texture_normal = ExtResource("3_pm3ni")
script = ExtResource("14_og1vs")

[node name="Ava2" type="TextureButton" parent="BotSelectLayer"]
offset_left = 256.0
offset_top = 56.0
offset_right = 384.0
offset_bottom = 139.0
texture_normal = ExtResource("4_jbj1t")
flip_h = true
script = ExtResource("14_og1vs")

[node name="Ava3" type="TextureButton" parent="BotSelectLayer"]
offset_left = 496.0
offset_top = 63.0
offset_right = 624.0
offset_bottom = 146.0
texture_normal = ExtResource("7_y6deb")
flip_h = true
script = ExtResource("14_og1vs")

[node name="Ava4" type="TextureButton" parent="BotSelectLayer"]
offset_left = 120.0
offset_top = 168.0
offset_right = 248.0
offset_bottom = 251.0
texture_normal = ExtResource("9_yc10j")
flip_h = true
script = ExtResource("14_og1vs")

[node name="Ava5" type="TextureButton" parent="BotSelectLayer"]
offset_left = 384.0
offset_top = 168.0
offset_right = 512.0
offset_bottom = 251.0
texture_normal = ExtResource("6_0ld40")
flip_h = true
script = ExtResource("14_og1vs")

[node name="BotDescription" type="Label" parent="BotSelectLayer"]
offset_left = 240.0
offset_top = 256.0
offset_right = 280.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("12_y6deb")
theme_override_font_sizes/font_size = 8

[node name="ConfirmButton" type="TextureButton" parent="BotSelectLayer"]
offset_left = 256.0
offset_top = 288.0
offset_right = 1280.0
offset_bottom = 1312.0
scale = Vector2(0.121973, 0.082809)
disabled = true
texture_normal = ExtResource("13_y6deb")
script = ExtResource("14_og1vs")

[node name="NhapNhay" type="Label" parent="BotSelectLayer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("12_y6deb")
text = "- Chơi với bot (PVE)
"
script = ExtResource("4_a8y0u")

[node name="main" type="Node2D" parent="."]
position = Vector2(171, 182)
scale = Vector2(3, 3)

[node name="Board" type="TileMapLayer" parent="main"]
z_index = 1
use_parent_material = true
tile_set = SubResource("TileSet_tbgi4")

[node name="BG" type="TileMapLayer" parent="main"]
position = Vector2(133, 65)
scale = Vector2(1.58914, 3.25144)
tile_map_data = PackedByteArray("AAAAAAAAAwAMAAgAAAAAAAEAAwALAAYAAAAAAAIAAwALAAYAAAAAAAMAAwALAAcAAAAAAAQAAwALAAgAAAABAAAAAwANAAgAAAABAAEAAwAMAAYAAAABAAIAAwAMAAYAAAABAAMAAwAMAAcAAAABAAQAAwAMAAgAAAACAAAAAwAMAAgAAAACAAEAAwANAAYAAAACAAIAAwALAAYAAAACAAMAAwALAAcAAAACAAQAAwALAAgAAAADAAAAAwANAAgAAAADAAEAAwALAAgAAAADAAIAAwALAAYAAAADAAQAAwALAAgAAAAEAAAAAwAMAAcAAAAEAAEAAwAMAAgAAAAEAAIAAwAMAAYAAAAEAAMAAwAMAAcAAAAEAAQAAwAMAAgAAAAFAAAAAwANAAcAAAAFAAEAAwANAAgAAAAFAAIAAwALAAYAAAAFAAMAAwALAAcAAAAFAAQAAwALAAgAAAAGAAAAAwALAAcAAAAGAAEAAwALAAgAAAAGAAIAAwALAAcAAAAGAAMAAwALAAgAAAAGAAQAAwAMAAgAAAAHAAAAAwAMAAcAAAAHAAEAAwAMAAgAAAAHAAIAAwAMAAcAAAAHAAMAAwAMAAgAAAAHAAQAAwALAAgAAAAIAAAAAwANAAcAAAAIAAEAAwANAAgAAAAIAAIAAwANAAcAAAAIAAMAAwANAAgAAAAIAAQAAwAMAAgAAAAJAAAAAwANAAgAAAAJAAEAAwAJAAMAAAAJAAIAAwANAAYAAAAJAAMAAwANAAcAAAAJAAQAAwANAAgAAAD+//7/AwAMAAYAAAD+////AwAMAAcAAAD+/wAAAwAMAAgAAAD+/wEAAwAMAAYAAAD+/wIAAwAMAAYAAAD///7/AwALAAYAAAD/////AwALAAcAAAD//wAAAwALAAgAAAD//wEAAwANAAYAAAD//wIAAwANAAYAAAAAAP7/AwAMAAYAAAAAAP//AwAMAAcAAAABAP7/AwANAAYAAAABAP//AwANAAcAAAACAP7/AwAMAAYAAAACAP//AwAMAAcAAAADAP7/AwANAAYAAAADAP//AwANAAcAAAAEAP7/AwALAAYAAAAEAP//AwAMAAYAAAAFAP7/AwAMAAYAAAAFAP//AwANAAYAAAAGAP7/AwANAAYAAAAGAP//AwALAAYAAAAHAP7/AwALAAYAAAAHAP//AwAMAAYAAAD9/wAAAwALAAgAAAD9/wEAAwALAAYAAAD9/wIAAwALAAYAAAD9/wMAAwALAAcAAAD9/wQAAwALAAgAAAD+/wMAAwAMAAcAAAD+/wQAAwAMAAgAAAD//wMAAwANAAcAAAD//wQAAwANAAgAAAD9//7/AwALAAYAAAD9////AwALAAcAAAAIAP7/AwAMAAYAAAAIAP//AwANAAYAAAAJAP7/AwANAAYAAAAJAP//AwANAAcAAAADAAMAAwALAAcAAAA=")
tile_set = SubResource("TileSet_o6xl0")

[node name="Pieces" type="Node2D" parent="main"]
z_index = 1
script = ExtResource("3_sugp2")

[node name="move_hint" type="Node2D" parent="main"]
z_index = 3

[node name="moved_dot" type="Node2D" parent="main"]

[node name="Audio" type="Node2D" parent="main"]

[node name="click" type="AudioStreamPlayer2D" parent="main/Audio"]
stream = ExtResource("10_choun")
volume_db = -3.0

[node name="move" type="AudioStreamPlayer2D" parent="main/Audio"]
stream = ExtResource("7_ya4ey")
volume_db = 5.0

[node name="ganh" type="AudioStreamPlayer2D" parent="main/Audio"]
stream = ExtResource("6_choun")
volume_db = 5.0

[node name="vay" type="AudioStreamPlayer2D" parent="main/Audio"]
stream = ExtResource("8_eb6dy")

[node name="win" type="AudioStreamPlayer2D" parent="main/Audio"]
stream = ExtResource("9_trceg")

[node name="loss" type="AudioStreamPlayer2D" parent="main/Audio"]
stream = ExtResource("10_a8y0u")

[node name="botselect" type="AudioStreamPlayer2D" parent="main/Audio"]
stream = ExtResource("26_2wyq8")
volume_db = -4.0
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 1127.0
offset_top = -198.0
offset_right = 1284.0
offset_bottom = -158.0
scale = Vector2(7.0179, 51.5327)
color = Color(0.956863, 0.752941, 0.490196, 1)

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(1647, 942)
scale = Vector2(0.236026, 0.272085)
texture = ExtResource("27_tel4y")

[node name="Point" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(1643, 697)
scale = Vector2(0.320418, 0.28631)
texture = ExtResource("28_2f3dj")
script = ExtResource("29_yq6so")

[node name="GameOver_win" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="BG" type="TextureRect" parent="GameOver_win"]
z_index = 100
layout_mode = 0
offset_right = 1024.0
offset_bottom = 1024.0
scale = Vector2(1.24972, 1.05224)
texture = ExtResource("30_fv21b")

[node name="BotSelectButton" type="Button" parent="GameOver_win/BG"]
layout_mode = 0
offset_left = 395.287
offset_top = 752.678
offset_right = 403.287
offset_bottom = 760.678
scale = Vector2(76.1403, 16.7933)
flat = true

[node name="mhchinh" type="Button" parent="GameOver_win/BG"]
layout_mode = 0
offset_left = 350.478
offset_top = 518.893
offset_right = 358.478
offset_bottom = 526.893
scale = Vector2(88.239, 19.9277)
flat = true

[node name="GameOver_loss" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BG" type="TextureRect" parent="GameOver_loss"]
z_index = 100
layout_mode = 0
offset_right = 1024.0
offset_bottom = 1024.0
scale = Vector2(1.25214, 1.051)
texture = ExtResource("31_tel4y")

[node name="choilai" type="Button" parent="GameOver_loss/BG"]
layout_mode = 0
offset_left = 524.703
offset_top = 764.033
offset_right = 532.703
offset_bottom = 772.033
scale = Vector2(59.9984, 19.5383)
flat = true

[node name="mhchinh" type="Button" parent="GameOver_loss/BG"]
layout_mode = 0
offset_left = 436.054
offset_top = 535.68
offset_right = 444.054
offset_bottom = 543.68
scale = Vector2(83.3332, 21.4333)
flat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Control" type="Control" parent="CanvasLayer"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("32_ijtf4")

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1698.0
offset_top = -8.0
offset_right = 2722.0
offset_bottom = 1528.0
scale = Vector2(0.194336, 0.194336)
texture_normal = ExtResource("33_ojrv4")
texture_pressed = ExtResource("33_ojrv4")
texture_hover = ExtResource("33_ojrv4")
texture_focused = ExtResource("33_ojrv4")

[node name="Control" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -768.0
offset_right = 768.0
offset_bottom = 1024.0
grow_horizontal = 2
texture = ExtResource("34_mui7k")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -126.0
offset_right = 230.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("35_r634c")
theme_override_constants/separation = 84

[node name="ResumeButton" type="Button" parent="CanvasLayer/Control/Control/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("35_r634c")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_styles/hover = ExtResource("36_2jwfa")
theme_override_styles/normal = SubResource("StyleBoxEmpty_brbbq")
text = "Resume
"

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("36_2jwfa")
theme_override_styles/hover_pressed = ExtResource("36_2jwfa")
theme_override_styles/hover = ExtResource("36_2jwfa")
theme_override_styles/pressed = ExtResource("36_2jwfa")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8n18e")
text = "Exit Game"

[connection signal="pressed" from="GameOver_win/BG/BotSelectButton" to="." method="_on_bot_select_button_pressed"]
[connection signal="pressed" from="GameOver_win/BG/mhchinh" to="." method="_on_mhchinh_pressed"]
[connection signal="pressed" from="GameOver_loss/BG/choilai" to="." method="_on_choilai_pressed"]
[connection signal="pressed" from="GameOver_loss/BG/mhchinh" to="." method="_on_mhchinh_pressed"]
